fixed contact info overflow on home page

--- a/styles/view.scss
+++ b/styles/view.scss
@@ -32,7 +32,7 @@ body:-webkit-scrollbar-thumb {
 
   display: flex;
   flex-direction: column;
-    overflow: hidden;
+  overflow: hidden;
   height: 100vh;
 }
 
@@ -58,6 +58,12 @@ body:-webkit-scrollbar-thumb {
   background-color: $pink;
   @include rounded();
   border: .55vw solid $white;
+}
+
+@media (min-width: 2088px) {
+  .container::-webkit-scrollbar {
+    width: 1vw;
+  }
 }
 
 /* Thumb hover effect */
